# aosp-cmake

./: .gitignore  CMakeLists.txt  README.md  update_aosp_scripts.sh
bionic/libc/async_safe/: CMakeLists.txt
bionic/libc/malloc_debug/: CMakeLists.txt
bionic/libc/seccomp/: CMakeLists.txt
frameworks/av/camera/: CMakeLists.txt
frameworks/av/drm/common/: CMakeLists.txt
frameworks/av/drm/drmserver/: CMakeLists.txt
frameworks/av/drm/libdrmframework/: CMakeLists.txt
frameworks/av/drm/libmediadrm/: CMakeLists.txt
frameworks/av/media/audioserver/: CMakeLists.txt
frameworks/av/media/img_utils/: CMakeLists.txt
frameworks/av/media/libaudioclient/: CMakeLists.txt
frameworks/av/media/libaudiohal/: CMakeLists.txt
frameworks/av/media/libaudioprocessing/: CMakeLists.txt
frameworks/av/media/libcpustats/: CMakeLists.txt
frameworks/av/media/libheif/: CMakeLists.txt
frameworks/av/media/libmedia/: CMakeLists.txt
frameworks/av/media/libmediametrics/: CMakeLists.txt
frameworks/av/media/libmediaplayerservice/: CMakeLists.txt
frameworks/av/media/libnbaio/: CMakeLists.txt
frameworks/av/media/libstagefright/: CMakeLists.txt
frameworks/av/media/mediaserver/: CMakeLists.txt
frameworks/av/media/mtp/: CMakeLists.txt
frameworks/av/media/ndk/: CMakeLists.txt
frameworks/av/media/utils/: CMakeLists.txt
frameworks/av/services/audioflinger/: CMakeLists.txt
frameworks/av/services/audiopolicy/: CMakeLists.txt
frameworks/av/services/mediaanalytics/: CMakeLists.txt
frameworks/av/services/mediacodec/: CMakeLists.txt
frameworks/av/services/mediadrm/: CMakeLists.txt
frameworks/av/services/mediaextractor/: CMakeLists.txt
frameworks/av/services/medialog/: CMakeLists.txt
frameworks/av/services/mediaresourcemanager/: CMakeLists.txt
frameworks/av/services/minijail/: CMakeLists.txt
frameworks/av/services/oboeservice/: CMakeLists.txt
frameworks/av/services/soundtrigger/: CMakeLists.txt
frameworks/av/soundtrigger/: CMakeLists.txt
frameworks/base/cmds/bootanimation/: CMakeLists.txt
frameworks/base/core/jni/: CMakeLists.txt
frameworks/base/libs/androidfw/: CMakeLists.txt
frameworks/base/libs/hwui/: CMakeLists.txt
frameworks/base/libs/storage/: CMakeLists.txt
frameworks/base/media/jni/: CMakeLists.txt
frameworks/base/native/android/: CMakeLists.txt
frameworks/minikin/libs/minikin/: CMakeLists.txt
frameworks/native/cmds/flatland/: CMakeLists.txt
frameworks/native/vulkan/: CMakeLists.txt
frameworks/rs/: CMakeLists.txt
frameworks/rs/cpp/: CMakeLists.txt
frameworks/rs/cpu_ref/: CMakeLists.txt
frameworks/wilhelm/src/: CMakeLists.txt
hardware/libhardware/: CMakeLists.txt
hardware/libhardware/modules/gralloc/: CMakeLists.txt
hardware/libhardware_legacy/: CMakeLists.txt
idea_aosp/: misc.xml
idea_kernel/: misc.xml
kernel/: CMakeLists.txt
kernel/msm/drivers/: CMakeLists.txt
kernel/msm/drivers/base/: CMakeLists.txt
kernel/msm/drivers/base/power/: CMakeLists.txt
kernel/msm/drivers/base/regmap/: CMakeLists.txt
kernel/msm/drivers/char/: CMakeLists.txt
kernel/msm/drivers/i2c/: CMakeLists.txt
kernel/msm/drivers/i2c/algos/: CMakeLists.txt
kernel/msm/drivers/i2c/busses/: CMakeLists.txt
kernel/msm/drivers/i2c/muxes/: CMakeLists.txt
kernel/msm/drivers/of/: CMakeLists.txt
kernel/msm/drivers/staging/: CMakeLists.txt
kernel/msm/drivers/staging/android/: CMakeLists.txt
kernel/msm/drivers/staging/android/ion/: CMakeLists.txt
kernel/msm/drivers/staging/android/ion/msm/: CMakeLists.txt
kernel/msm/fs/: CMakeLists.txt
kernel/msm/fs/debugfs/: CMakeLists.txt
kernel/msm/kernel/: CMakeLists.txt
kernel/msm/kernel/cpu/: CMakeLists.txt
kernel/msm/kernel/events/: CMakeLists.txt
kernel/msm/kernel/irq/: CMakeLists.txt
kernel/msm/kernel/power/: CMakeLists.txt
kernel/msm/kernel/sched/: CMakeLists.txt
kernel/msm/kernel/time/: CMakeLists.txt
kernel/msm/kernel/trace/: CMakeLists.txt
kernel/msm/lib/: CMakeLists.txt
kernel/msm/mm/: CMakeLists.txt
kernel/msm/security/: CMakeLists.txt
kernel/msm/security/apparmor/: CMakeLists.txt
kernel/msm/security/integrity/: CMakeLists.txt
kernel/msm/security/integrity/evm/: CMakeLists.txt
kernel/msm/security/integrity/ima/: CMakeLists.txt
kernel/msm/security/keys/: CMakeLists.txt
kernel/msm/security/keys/encrypted-keys/: CMakeLists.txt
kernel/msm/security/selinux/: CMakeLists.txt
kernel/msm/security/smack/: CMakeLists.txt
kernel/msm/security/tomoyo/: CMakeLists.txt
kernel/msm/security/yama/: CMakeLists.txt
libnativehelper/: CMakeLists.txt
system/core/base/: CMakeLists.txt
system/core/debuggerd/: CMakeLists.txt
system/core/demangle/: CMakeLists.txt
system/core/libappfuse/: CMakeLists.txt
system/core/libbacktrace/: CMakeLists.txt
system/core/libcrypto_utils/: CMakeLists.txt
system/core/libcutils/: CMakeLists.txt
system/core/libdiskconfig/: CMakeLists.txt
system/core/libgrallocusage/: CMakeLists.txt
system/core/libkeyutils/: CMakeLists.txt
system/core/liblog/: CMakeLists.txt
system/core/libmemtrack/: CMakeLists.txt
system/core/libmemunreachable/: CMakeLists.txt
system/core/libnativebridge/: CMakeLists.txt
system/core/libnativeloader/: CMakeLists.txt
system/core/libpackagelistparser/: CMakeLists.txt
system/core/libprocessgroup/: CMakeLists.txt
system/core/libsparse/: CMakeLists.txt
system/core/libsync/: CMakeLists.txt
system/core/libsysutils/: CMakeLists.txt
system/core/libusbhost/: CMakeLists.txt
system/core/libutils/: CMakeLists.txt
system/core/libvndksupport/: CMakeLists.txt
system/core/libziparchive/: CMakeLists.txt
system/core/logwrapper/: CMakeLists.txt
system/extras/ext4_utils/: CMakeLists.txt
system/extras/f2fs_utils/: CMakeLists.txt
system/libfmq/: CMakeLists.txt
system/libhidl/base/: CMakeLists.txt
system/libhidl/libhidlmemory/: CMakeLists.txt
system/libhidl/transport/: CMakeLists.txt
system/libhwbinder/: CMakeLists.txt
system/libvintf/: CMakeLists.txt
system/media/audio_utils/: CMakeLists.txt
system/media/camera/: CMakeLists.txt
system/netd/client/: CMakeLists.txt
(+81 files in other folders)
